# earnings-oracle

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  rag_pipeline.py
.github/workflows/: cd.yml  ci.yml
api/: dependencies.py  errors.py  main.py  metrics.py  middleware.py  models.py
api/routes/: health.py  metrics_route.py  query.py
cache/: __init__.py  semantic_cache.py
config/: openai_client.py  settings.py
crag/: __init__.py  corrector.py  grader.py  models.py  web_search.py
docs/: .env.example  API_REFERENCE.md  ARCHITECTURE.md  CI_CD.md  DEPLOYMENT.md  DEVELOPMENT.md  LLMOPS.md
evaluation/: __init__.py  dataset.py  harness.py  metrics.py  models.py  statistics.py
experiments/: __init__.py  retrieval_experiment.py
generation/: __init__.py  context_builder.py  generator.py  models.py  prompts.py
ingestion/: chunker.py  download_filings.py  indexer.py  metadata_extractor.py  parser.py  pipeline.py  sec_data_downloader.py
knowledge_graph/: __init__.py  entity_store.py  extractor.py  graph_retriever.py  models.py
observability/: __init__.py  cost_tracker.py  trace_models.py  tracer.py
query/: __init__.py  models.py  prompts.py  router.py  transformer.py
retrieval/: __init__.py  models.py  reranker.py  searcher.py
scripts/: entrypoints.py  inspect_index.py  run_portfolio_ablations.py
tests/: conftest.py  test_api_errors.py  test_api_health.py  test_api_metrics.py  test_api_middleware.py  test_api_models.py  test_api_query.py  test_chunker.py  test_config_openai_client.py  test_context_builder.py  test_cost_tracker.py  test_crag_corrector.py  test_crag_grader.py  test_crag_web_search.py  test_download_filings.py  test_entity_extractor.py  test_evaluation_harness.py  test_evaluation_metrics.py  test_evaluation_statistics.py  test_generator.py  test_graph_retriever.py  test_indexer.py  test_knowledge_graph_models.py  test_metadata_extractor.py  test_observability_models.py  test_parser.py  test_pipeline.py  test_query_models.py  test_query_prompts.py  test_query_router.py  test_query_transformer.py  test_retrieval_experiment.py  test_retrieval_models.py  test_retrieval_reranker.py  test_retrieval_searcher.py  test_semantic_cache.py  test_tracer.py  test_ui_utils.py
ui/: app.py  utils.py
