[tool.poetry]
name = "financial-rag-system"
version = "0.1.0"
description = "Financial Earnings Call RAG System"
authors = ["Deepak J"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.32.0"
python-dotenv = "^1.1.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.0"
pytest = "^8.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"