[tool.poetry]
name = "financial-rag-system"
version = "0.1.0"
description = "Financial Earnings Call RAG System"
authors = ["Deepak J"]
readme = "README.md"
package-mode = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poetry.dependencies]
python         = ">=3.11,<3.13"
requests       = "^2.32.0"
python-dotenv  = "^1.1.0"
beautifulsoup4 = "^4.12.0"
lxml           = "^5.3.0"
fastembed      = "^0.4.0"
qdrant-client  = "^1.17.1"
rank-bm25      = "^0.2.2"
loguru         = "^0.7.3"
tqdm           = "^4.67.3"
numpy          = "^2.4.4"
tiktoken       = "^0.12.0"
openai         = ">=2.0.0"
tenacity       = "^9.1.4"
flashrank      = "^0.2.9"

[tool.poetry.group.dev.dependencies]
ruff                 = "^0.9.0"
pytest               = "^8.3.0"
pre-commit           = "^4.5.1"
mypy                 = "^1.20.0"
bandit               = "^1.9.4"
types-requests       = "^2.33.0.20260408"
types-beautifulsoup4 = "^4.12.0.20250516"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (undefined names, unused imports)
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (common bugs)
    "C4",  # flake8-comprehensions (cleaner list/dict/set)
    "UP",  # pyupgrade (modernize syntax for Python 3.11)
    "N",   # pep8-naming conventions
]
ignore = [
    "E501",  # line too long — handled by ruff-format
    "B008",  # do not perform function calls in default args
]

[tool.mypy]
python_version        = "3.11"
ignore_missing_imports = true
disallow_untyped_defs  = true
no_strict_optional     = true
pretty                 = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips        = ["B101"]  # skip assert warnings (fine in tests)

[tool.ruff.lint.isort]
known-first-party = ["ingestion", "query", "retrieval", "generation", "config"]
