# pyproject.toml
[tool.poetry]
name = "financial-rag-system"
version = "0.1.0"
description = "Financial Earnings Call RAG System"
authors = ["Deepak J"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python          = ">=3.11,<3.13"
requests        = "^2.32.0"
python-dotenv   = "^1.1.0"
beautifulsoup4  = "^4.12.0"
lxml            = "^5.3.0"
fastembed       = "^0.4.0"
qdrant-client   = "^1.17.1"
rank-bm25       = "^0.2.2"
loguru          = "^0.7.3"
tqdm            = "^4.67.3"
numpy           = "^2.4.4"
tiktoken        = "^0.12.0"
openai          = ">=2.0.0"
tenacity        = "^9.1.4"
flashrank       = "^0.2.9"
fastapi         = ">=0.115.0,<1.0.0"
uvicorn         = {extras = ["standard"], version = ">=0.34.0"}

# ── Observability (NEW) ──────────────────────────────────────────────────────
# prometheus-client: exposes GET /metrics in Prometheus text format.
# The default registry is process-global so no extra setup is needed.
prometheus-client = "^0.20.0"

# ── UI (NEW) ─────────────────────────────────────────────────────────────────
# streamlit: Streamlit chat UI in ui/app.py
streamlit = ">=1.35.0,<2.0.0"

# ── Optional: CRAG web search providers ─────────────────────────────────────
tavily-python     = {version = ">=0.5.0", optional = true}
duckduckgo-search = {version = ">=6.0.0", optional = true}

[tool.poetry.group.dev.dependencies]
ruff                 = "^0.9.0"
pytest               = ">=9.0.3"
pytest-cov = ">=5.0.0"
pre-commit           = "^4.5.1"
mypy                 = "^1.20.0"
bandit               = "^1.9.4"
types-requests       = "^2.33.0.20260408"
types-beautifulsoup4 = "^4.12.0.20250516"
httpx                = ">=0.27.0"   # required by FastAPI's TestClient
pytest-asyncio       = ">=0.24.0"  # for async test functions
pip-audit            = "^2.7.3"    # Dependency vulnerability scanner

[tool.poetry.scripts]
# Convenience CLI shortcuts
serve      = "scripts.entrypoints:serve_dev"
serve-prod = "scripts.entrypoints:serve_prod"
ui         = "scripts.entrypoints:run_ui"
experiment = "experiments.retrieval_experiment:_cli_main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (undefined names, unused imports)
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (common bugs)
    "C4",  # flake8-comprehensions (cleaner list/dict/set)
    "UP",  # pyupgrade (modernize syntax for Python 3.11)
    "N",   # pep8-naming conventions
]
ignore = [
    "E501",  # line too long — handled by ruff-format
    "B008",  # do not perform function calls in default args
]

[tool.mypy]
python_version        = "3.11"
ignore_missing_imports = true
disallow_untyped_defs  = true
no_strict_optional     = true
pretty                 = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips        = [
    "B101",  # skip assert warnings
    "B104",  # hardcoded 0.0.0.0 bind is intended for docker
    "B106",  # false positive on 'prompt' token type
    "B301",  # pickle is used intentionally for local BM25 index
    "B403",  # pickle import is used intentionally
    "B404",  # subprocess import is used intentionally in entrypoints
    "B603",  # subprocess without shell=True is safe here
]

[tool.ruff.lint.isort]
known-first-party = ["ingestion", "query", "retrieval", "generation", "crag", "evaluation", "api", "config", "ui"]

[tool.poetry.extras]
crag-tavily = ["tavily-python"]
crag-ddg    = ["duckduckgo-search"]
crag        = ["tavily-python", "duckduckgo-search"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = [
    "--tb=short",
    "--cov=ingestion",
    "--cov=query",
    "--cov=retrieval",
    "--cov=generation",
    "--cov=crag",
    "--cov=evaluation",
    "--cov=api",
    "--cov=config",
    "--cov-report=term-missing",
    "--cov=experiments",
]
# Note: --cov-fail-under is intentionally left in the CI command only
# so local runs don't fail when you're mid-development below 80%

[tool.coverage.run]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
